[tool.poetry]
name = "yolact"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pydicom = "^1.3"
pillow = "^6.1"
torch = "=1.1.0"
torchvision = "^0.3.0"
opencv-python-headless = "^4.1"
pycocotools = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
cython = "^0.29.12"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = "^4.3"
jupyter = "^1.0"
jupytext = "^1.1"
ipython = "^7.6"
matplotlib = "^3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
